# online_store

./: .env.sample  README.md  categories.json  contacts.json  groops.json  products.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogarticle_confirm_delete.html  blogarticle_detail.html  blogarticle_form.html  blogarticle_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_price.py  0002_product_manufactured_at.py  0003_contact.py  0004_alter_contact_message_alter_contact_phone.py  0005_version.py  0006_alter_version_is_active.py  0007_alter_version_is_active.py  0008_alter_version_is_active.py  0009_alter_version_is_active.py  0010_product_owner.py  0011_alter_product_options_product_is_published.py
catalog/templates/: base.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  category_list.html  contact_form.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html
users/templates/users/: reset_password.html  user_form.html
(+1 files in other folders)
