[tool.poetry]
name = "onlile-store"
version = "0.1.0"
description = ""
authors = ["Tatyana Kharlamova <kharlamova2785@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
black = "^24.4.2"
ipython = "^8.24.0"
django-stubs = "^5.0.0"
flake8 = "^7.0.0"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.0.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
